Fix horizontal scroll created by page header

--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -6,12 +6,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 76px 1rem 1rem 1rem;
+    padding: 76px 1rem 1rem 0;
     background-color: white;
     gap: 1rem;
     @include text-header;
     @include desktop {
-        width: 100vw;
+        width: 100%;
         height: 80.91px;
         padding-top: 0;
         padding-bottom: 0;
@@ -29,8 +29,12 @@
     &__add-container {
         display: flex;
         align-items: center;
-        gap:1rem;
+        gap:0.75rem;
         cursor: pointer;
+        padding-right: 1rem;
+        @include desktop {
+            padding-right: 2rem;
+        }
     }
     &__add-title {
         display: none;
